# math

./: CMakeLists.txt  LICENSE  README.md
include/: angle.h  conv.h  cylindrical.h  euler.h  math_predefs.h  matrix2x2.h  matrix3x3.h  matrix4x4.h  matrix_transforms.h  polar.h  quaternion.h  spherical.h  vector2.h  vector3.h  vector4.h
src/: cylindrical.cpp  euler.cpp  matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  polar.cpp  quaternion.cpp  spherical.cpp  vector2.cpp  vector3.cpp  vector4.cpp
test/: CMakeLists.txt  adj.py  math_test.cpp
